# mavehgvs

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: api.rst  conf.py  index.rst  prefix.csv  spec.rst
hgvsp/: __init__.py  constants.py  dna.py  protein.py  rna.py
hgvsp/tests/: test_dna_hgvs.py  test_hgvs.py  test_protein_hgvs.py  test_rna_hgvs.py
mavehgvs/: __init__.py  exceptions.py  position.py  rna.py  util.py  utilities.py  variant.py
mavehgvs/patterns/: combined.py  dna.py  position.py  protein.py  rna.py  shared.py  util.py
src/mavehgvs/: __init__.py  exceptions.py  position.py  util.py  variant.py
src/mavehgvs/patterns/: combined.py  dna.py  position.py  protein.py  rna.py  util.py
tests/: test_dna_hgvs.py  test_hgvs.py  test_patterns_util.py  test_position.py  test_protein_hgvs.py  test_rna_hgvs.py  test_util.py  test_utilities.py  test_variant.py
tests/deprecated/: test_dna_hgvs.py  test_rna_hgvs.py
tests/test_patterns/: __init__.py  test_dna.py  test_protein.py  test_rna.py  test_util.py
